[package]
name = "yc-iot-esp"
version = "0.1.0"
authors = ["Andrei Khaliullin <andrew.haliullin@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]
# native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = { version = "0.45.0" }
esp-idf-hal = { version = "0.40.1" }
embedded-svc = { version = "0.24.0" }

[build-dependencies]
embuild = "0.31.0"
anyhow = { version = "1.0.69" }
